Updates to hratchian.bib to reflect our 2018 paper on TiO2+H2O.

--- a/hratchian.bib
+++ b/hratchian.bib
@@ -4,6 +4,17 @@
 % 2013.
 %
 
+@article{DeVine:2018ge,
+author = {DeVine, Jessalyn A and Taka, Ali Abou and Babin, Mark C and Weichman, Marissa L and Hratchian, Hrant P and Neumark, Daniel M},
+title = {{High-resolution photoelectron spectroscopy of \ce{TiO3H2^-}: Probing the \ce{TiO2^-} + \ce{H2O} dissociative adduct}},
+journal = {J. Chem. Phys.},
+year = {2018},
+volume = {148},
+number = {22},
+pages = {222810},
+month = feb
+}
+
 @article{h2017_jcp:104301,
 author = {Thompson, Lee M and Jarrold, Caroline C and Hratchian, Hrant P},
 title = {{Explaining the MoVO$_4^-$ photoelectron spectrum: Rationalization of geometric and electronic structure}},
