Slight modification to the desciption header.

--- a/hratchian.bib
+++ b/hratchian.bib
@@ -1,6 +1,6 @@
 % This is a BibTeX file of papers published by the Hratchian Group at the
 % University of California, Merced. The file also includes BibTeX entries for
-% Hrant Hratchian's publications appearing before starting at UC Merced in
+% Hrant P. Hratchian's publications appearing before starting at UC Merced in
 % 2013.
 %
 
