Added setactivity option. This was motivated by wanting a correct looking right-header for Programming Exercises in CHEM 225.

--- a/tex/hph.cls
+++ b/tex/hph.cls
@@ -301,6 +301,11 @@
   \renewcommand{\HPHHW@ActivityTitle}{#1}
 }
 %
+%   \settypee
+\newcommand{\settype}[1]{
+  \renewcommand{\HPHHW@ActivityType}{#1}
+}
+%
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
