Updated refs and added sfmath package to the hph class.

--- a/bibtex/bib/hratchian.bib
+++ b/bibtex/bib/hratchian.bib
@@ -379,12 +379,16 @@ pages = {61--69},
 month = jan
 }
 
-@article{h2005_tacc:195,
+@incollection{h2005_tacc:195,
 author = {Hratchian, H P and Schlegel, H B},
+editor = {Dykstra, Clifford E. and Frenking, Gernot and Kim, Kwang S. and Scuseria, Gustavo E.},
+booktitle = {{Theory and Applications of Computational Chemistry}},
 title = {{Finding Minima, Transition States, and Following Reaction Pathways on Ab Initio Potential Energy Surfaces}},
 journal = {Theory and applications of computational chemistry: the first forty years},
+publisher = {Elsevier},
+address = {Amsterdam},
 year = {2005},
-pages = {195}
+pages = {195--249}
 }
 
 @article{h2004_jcp:9918,
