Fixed some spacing issues with \multiplechoicesolution.

--- a/tex/hph.cls
+++ b/tex/hph.cls
@@ -580,11 +580,7 @@
 %
 \newcommand{\multiplechoicesolution}[1]{
   \ifthenelse{\boolean{HPHHW@SolutionsVersion}}
-  {
-    {\color{blue} \boxed{#1}}
-  }{
-    #1
-  }
+  {{\color{blue}\boxed{#1}}}{#1}
 }
 %
 %
