--- a/tex/acronyms.tex
+++ b/tex/acronyms.tex
@@ -1,32 +1,38 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % Custom commands to handle acronyms. Acronyms handled by these commands
-% include:  AO
-%           AP
-%           DFT
-%           PE
-%           PES
-%           HDE
-%           HF
-%           MO
-%           MLCT
-%           SCO
-%           RPH
-%           URVA
-%           IRC
-%           GHF
-%           SCF
-%           MP2
-%           AIMD
-%           CI
-%	    CAS
-%	    NO
-%           NIO
-%           UCM
-%           MCSD
+% include:  \AIMD  -- ab initio molecular dynamics
+%           \AO    -- atomic orbital; \AOs is also available
+%           \AP    -- Approximate Projection (AP)
+%	    \CAS   -- Complete Active Space
+%           \CI    -- configuration interaction
+%           \DFT   -- Density Functional Theory
+%           \GHF   -- Generalized Hartree-Fock
+%           \HDE   -- Heisenberg Double Exchange
+%           \HF    -- Hartree-Fock
+%           \IRC   -- intrinsic reaction coordinate; \capIRC is also available
+%           \MCSD  -- Merced City School District
+%           \MO    -- molecular orbital; \MOs is also available
+%           \MLCT  -- metal to ligand charge transfer; \capMLCT is also available
+%           \MPTwo -- second-order Moller-Plesset perturbation theory
+%	    \NO    -- natural orbital; \NOs is also available
+%           \PE    -- photoelectron; \catPE is also available
+%           \PES   -- potential energy surface; \PESs, \cat PES, and \capPESs also available
+%           \SCF   -- self-consistent field; \capSCF is also available
+%           \SCO   -- spin crossover; \capSCO is also available
+%           \RPH   -- Reaction Path Hamiltonian
+%           \UCM   -- University of California, Merced
+%           \URVA  -- Unified Reaction Valley Approach
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
+%
+%   \AIMD
+\newcounter{hphaimdcounter} \setcounter{hphaimdcounter}{0}
+\providecommand{\AIMD}{abc}
+\renewcommand{\AIMD}
+  {\addtocounter{hphaimdcounter}{1}\ifthenelse{\equal{\thehphaimdcounter}{1}}{ab
+  initio molecular dynamics (AIMD)}{AIMD}}
 %
 %   \AO
 \newcounter{hphaocounter} \setcounter{hphaocounter}{0}
@@ -45,28 +51,31 @@
 \renewcommand{\AP}
   {\addtocounter{hphapcounter}{1}\ifthenelse{\equal{\thehphapcounter}{1}}{Approximate Projection (AP)}{AP}}
 %
-%   \PE
-\newcounter{hphpecounter} \setcounter{hphpecounter}{0}
-\providecommand{\PE}{abc}
-\renewcommand{\PE}
-  {photoelectron}
-\providecommand{\capPE}{abc}
-\renewcommand{\capPE}
-  {Photoelectron}
-%   \PES, \PESs, \capPES, \capPESs
-\newcounter{hphpescounter} \setcounter{hphpescounter}{0}
-\providecommand{\PES}{abc}
-\renewcommand{\PES}
-  {\addtocounter{hphpescounter}{1}\ifthenelse{\equal{\thehphpescounter}{1}}{potential energy surface (PES)}{PES}}
-\providecommand{\PESs}{abc}
-\renewcommand{\PESs}
-  {\addtocounter{hphpescounter}{1}\ifthenelse{\equal{\thehphpescounter}{1}}{potential energy surfaces (PESs)}{PESs}}
-\providecommand{\capPES}{abc}
-\renewcommand{\capPES}
-  {\addtocounter{hphpescounter}{1}\ifthenelse{\equal{\thehphpescounter}{1}}{Potential energy surface (PES)}{PES}}
-\providecommand{\capPESs}{abc}
-\renewcommand{\capPESs}
-  {\addtocounter{hphpescounter}{1}\ifthenelse{\equal{\thehphpescounter}{1}}{Potential energy surfaces (PESs)}{PESs}}
+%   \CAS
+\newcounter{cascounter} \setcounter{cascounter}{0}
+\providecommand{\CAS}{abc}
+\renewcommand{\CAS}
+  {\addtocounter{cascounter}{1}\ifthenelse{\equal{\thecascounter}{1}}{Complete Active Space (CAS)}{CAS}}
+%
+%   \CI
+\newcounter{cicounter} \setcounter{cicounter}{0}
+\providecommand{\CI}{abc}
+\renewcommand{\CI}
+  {\addtocounter{cicounter}{1}\ifthenelse{\equal{\thecicounter}{1}}{Configuration Interaction (CI)}{CI}}
+%
+%   \DFT
+\newcounter{hphdftcounter} \setcounter{hphdftcounter}{0}
+\providecommand{\DFT}{abc}
+\renewcommand{\DFT}
+  {\addtocounter{hphdftcounter}{1}\ifthenelse{\equal{\thehphdftcounter}{1}}{Density
+  Functional Theory (DFT)}{DFT}}
+%
+%   \GHF
+\newcounter{hphghfcounter} \setcounter{hphghfcounter}{0}
+\providecommand{\GHF}{abc}
+\renewcommand{\GHF}
+  {\addtocounter{hphghfcounter}{1}\ifthenelse{\equal{\thehphghfcounter}{1}}{Generalized
+  Hartree\textendash Fock (GHF)}{GHF}}
 %
 %   \HDE
 \newcounter{hphhdecounter} \setcounter{hphhdecounter}{0}
@@ -79,6 +88,21 @@
 \providecommand{\HF}{abc}
 \renewcommand{\HF}
   {\addtocounter{hphhfcounter}{1}\ifthenelse{\equal{\thehphhfcounter}{1}}{Hartree\textendash Fock (HF)}{HF}}
+%
+%   \IRC
+\newcounter{hphirccounter} \setcounter{hphirccounter}{0}
+\providecommand{\IRC}{abc}
+\renewcommand{\IRC}
+  {\addtocounter{hphirccounter}{1}\ifthenelse{\equal{\thehphirccounter}{1}}{intrinsic reaction coordinate (IRC)}{IRC}}
+\providecommand{\capIRC}{abc}
+\renewcommand{\capIRC}
+  {\addtocounter{hphirccounter}{1}\ifthenelse{\equal{\thehphirccounter}{1}}{Intrinsic reaction coordinate (IRC)}{IRC}}
+%
+%   \MCSD
+\newcounter{hphmcsdcounter} \setcounter{hphmcsdcounter}{0}
+\providecommand{\MCSD}{abc}
+\renewcommand{\MCSD}
+  {\addtocounter{hphmcsdcounter}{1}\ifthenelse{\equal{\thehphmcsdcounter}{1}}{Merced City School District (MCSD)}{MCSD}}
 %
 %   \MO, \MOs
 \newcounter{hphmocounter} \setcounter{hphmocounter}{0}
@@ -100,82 +124,12 @@
 \renewcommand{\capMLCT}
   {\addtocounter{hphmlctcounter}{1}\ifthenelse{\equal{\thehphmlctcounter}{1}}{Metal\textendash to\textendash ligand charge transfer (MLCT)}{MLCT}}
 %
-%   \SCO, \capSCO
-\newcounter{hphscocounter} \setcounter{hphscocounter}{0}
-\providecommand{\SCO}{abc}
-\renewcommand{\SCO}
-  {\addtocounter{hphscocounter}{1}\ifthenelse{\equal{\thehphscocounter}{1}}{spin crossover (SCO)}{SCO}}
-\providecommand{\capSCO}{abc}
-\renewcommand{\capSCO}
-  {\addtocounter{hphscocounter}{1}\ifthenelse{\equal{\thehphscocounter}{1}}{Spin crossover (SCO)}{SCO}}
-%
-%   \RPH
-\newcounter{hphrphcounter} \setcounter{hphrphcounter}{0}
-\providecommand{\RPH}{abc}
-\renewcommand{\RPH}
-  {\addtocounter{hphrphcounter}{1}\ifthenelse{\equal{\thehphrphcounter}{1}}{Reaction Path Hamiltonian (RPH)}{RPH}}
-%
-%   \URVA
-\newcounter{hphurvacounter} \setcounter{hphurvacounter}{0}
-\providecommand{\URVA}{abc}
-\renewcommand{\URVA}
-  {\addtocounter{hphurvacounter}{1}\ifthenelse{\equal{\thehphurvacounter}{1}}{Unified Reaction Valley Approach (URVA)}{URVA}}
-%
-%   \IRC
-\newcounter{hphirccounter} \setcounter{hphirccounter}{0}
-\providecommand{\IRC}{abc}
-\renewcommand{\IRC}
-  {\addtocounter{hphirccounter}{1}\ifthenelse{\equal{\thehphirccounter}{1}}{intrinsic reaction coordinate (IRC)}{IRC}}
-\providecommand{\capIRC}{abc}
-\renewcommand{\capIRC}
-  {\addtocounter{hphirccounter}{1}\ifthenelse{\equal{\thehphirccounter}{1}}{Intrinsic reaction coordinate (IRC)}{IRC}}
-%
-%   \GHF
-\newcounter{hphghfcounter} \setcounter{hphghfcounter}{0}
-\providecommand{\GHF}{abc}
-\renewcommand{\GHF}
-  {\addtocounter{hphghfcounter}{1}\ifthenelse{\equal{\thehphghfcounter}{1}}{Generalized
-  Hartree\textendash Fock (GHF)}{GHF}}
-%
-%   \DFT
-\newcounter{hphdftcounter} \setcounter{hphdftcounter}{0}
-\providecommand{\DFT}{abc}
-\renewcommand{\DFT}
-  {\addtocounter{hphdftcounter}{1}\ifthenelse{\equal{\thehphdftcounter}{1}}{Density
-  Functional Theory (DFT)}{DFT}}
-%
-%   \SCF
-\newcounter{hphscfcounter} \setcounter{hphscfcounter}{0}
-\providecommand{\SCF}{abc}
-\renewcommand{\SCF}
-  {\addtocounter{hphscfcounter}{1}\ifthenelse{\equal{\thehphscfcounter}{1}}{self\textendash consistent field (SCF)}{SCF}}
-\providecommand{\capSCF}{abc}
-\renewcommand{\capSCF}
-  {\addtocounter{hphscfcounter}{1}\ifthenelse{\equal{\thehphscfcounter}{1}}{Self\textendash consistent field (SCF)}{SCF}}
-%
 %   \MPTwo
 \newcounter{hphmptwocounter} \setcounter{hphmptwocounter}{0}
 \providecommand{\MPTwo}{abc}
 \renewcommand{\MPTwo}
   {\addtocounter{hphmptwocounter}{1}\ifthenelse{\equal{\thehphmptwocounter}{1}}{second\textendash{}order
     M\o{}ller\textendash{}Plesset perturbation theory (MP2)}{MP2}}
-%
-%   \AIMD
-\newcounter{hphaimdcounter} \setcounter{hphaimdcounter}{0}
-\providecommand{\AIMD}{abc}
-\renewcommand{\AIMD}
-  {\addtocounter{hphaimdcounter}{1}\ifthenelse{\equal{\thehphaimdcounter}{1}}{ab
-  initio molecular dynamics (AIMD)}{AIMD}}
-%   \CI
-\newcounter{cicounter} \setcounter{cicounter}{0}
-\providecommand{\CI}{abc}
-\renewcommand{\CI}
-  {\addtocounter{cicounter}{1}\ifthenelse{\equal{\thecicounter}{1}}{Configuration Interaction (CI)}{CI}}
-%   \CAS
-\newcounter{cascounter} \setcounter{cascounter}{0}
-\providecommand{\CAS}{abc}
-\renewcommand{\CAS}
-  {\addtocounter{cascounter}{1}\ifthenelse{\equal{\thehphnocounter}{1}}{Complete Active Space (CAS)}{CAS}}
 %
 %   \NO
 \newcounter{hphnocounter} \setcounter{hphnocounter}{0}
@@ -188,16 +142,53 @@
   {\addtocounter{hphnocounter}{1}\ifthenelse{\equal{\thehphnocounter}{1}}{natural
   orbitals (NOs)}{NOs}}
 %
-%   \NIO
-\newcounter{hphniocounter} \setcounter{hphniocounter}{0}
-\providecommand{\NIO}{abc}
-\renewcommand{\NIO}
-  {\addtocounter{hphniocounter}{1}\ifthenelse{\equal{\thehphniocounter}{1}}{Natural
-  Ionization Orbtial (NIO)}{NIO}}
-\providecommand{\NIOs}{abc}
-\renewcommand{\NIOs}
-  {\addtocounter{hphniocounter}{1}\ifthenelse{\equal{\thehphniocounter}{1}}{Natural
-  Ionization Orbitals (NIOs)}{NIOs}}
+%   \PE
+\newcounter{hphpecounter} \setcounter{hphpecounter}{0}
+\providecommand{\PE}{abc}
+\renewcommand{\PE}
+  {photoelectron}
+\providecommand{\capPE}{abc}
+\renewcommand{\capPE}
+  {Photoelectron}
+%
+%   \PES, \PESs, \capPES, \capPESs
+\newcounter{hphpescounter} \setcounter{hphpescounter}{0}
+\providecommand{\PES}{abc}
+\renewcommand{\PES}
+  {\addtocounter{hphpescounter}{1}\ifthenelse{\equal{\thehphpescounter}{1}}{potential energy surface (PES)}{PES}}
+\providecommand{\PESs}{abc}
+\renewcommand{\PESs}
+  {\addtocounter{hphpescounter}{1}\ifthenelse{\equal{\thehphpescounter}{1}}{potential energy surfaces (PESs)}{PESs}}
+\providecommand{\capPES}{abc}
+\renewcommand{\capPES}
+  {\addtocounter{hphpescounter}{1}\ifthenelse{\equal{\thehphpescounter}{1}}{Potential energy surface (PES)}{PES}}
+\providecommand{\capPESs}{abc}
+\renewcommand{\capPESs}
+  {\addtocounter{hphpescounter}{1}\ifthenelse{\equal{\thehphpescounter}{1}}{Potential energy surfaces (PESs)}{PESs}}
+%
+%   \RPH
+\newcounter{hphrphcounter} \setcounter{hphrphcounter}{0}
+\providecommand{\RPH}{abc}
+\renewcommand{\RPH}
+  {\addtocounter{hphrphcounter}{1}\ifthenelse{\equal{\thehphrphcounter}{1}}{Reaction Path Hamiltonian (RPH)}{RPH}}
+%
+%   \SCF
+\newcounter{hphscfcounter} \setcounter{hphscfcounter}{0}
+\providecommand{\SCF}{abc}
+\renewcommand{\SCF}
+  {\addtocounter{hphscfcounter}{1}\ifthenelse{\equal{\thehphscfcounter}{1}}{self\textendash consistent field (SCF)}{SCF}}
+\providecommand{\capSCF}{abc}
+\renewcommand{\capSCF}
+  {\addtocounter{hphscfcounter}{1}\ifthenelse{\equal{\thehphscfcounter}{1}}{Self\textendash consistent field (SCF)}{SCF}}
+%
+%   \SCO, \capSCO
+\newcounter{hphscocounter} \setcounter{hphscocounter}{0}
+\providecommand{\SCO}{abc}
+\renewcommand{\SCO}
+  {\addtocounter{hphscocounter}{1}\ifthenelse{\equal{\thehphscocounter}{1}}{spin crossover (SCO)}{SCO}}
+\providecommand{\capSCO}{abc}
+\renewcommand{\capSCO}
+  {\addtocounter{hphscocounter}{1}\ifthenelse{\equal{\thehphscocounter}{1}}{Spin crossover (SCO)}{SCO}}
 %
 %   \UCM
 \newcounter{hphucmcounter} \setcounter{hphucmcounter}{0}
@@ -206,8 +197,8 @@
   {\addtocounter{hphucmcounter}{1}\ifthenelse{\equal{\thehphucmcounter}{1}}{University
   of California, Merced (UCM)}{UCM}}
 %
-%   \MCSD
-\newcounter{hphmcsdcounter} \setcounter{hphmcsdcounter}{0}
-\providecommand{\MCSD}{abc}
-\renewcommand{\MCSD}
-  {\addtocounter{hphmcsdcounter}{1}\ifthenelse{\equal{\thehphmcsdcounter}{1}}{Merced City School District (MCSD)}{MCSD}}
+%   \URVA
+\newcounter{hphurvacounter} \setcounter{hphurvacounter}{0}
+\providecommand{\URVA}{abc}
+\renewcommand{\URVA}
+  {\addtocounter{hphurvacounter}{1}\ifthenelse{\equal{\thehphurvacounter}{1}}{Unified Reaction Valley Approach (URVA)}{URVA}}
