updates to the symbols style.

--- a/tex/hphsymbols.sty
+++ b/tex/hphsymbols.sty
@@ -1,5 +1,6 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{hphsymbols}[2020/08/09]
+\RequirePackage{mathtools}
 %
 % This LaTeX style provides a number of macros for symbols frequently used
 % by the Hratchian Group at the University of California, Merced.
